text alignment and icon placement issue fixed

--- a/src/src/css/main.css
+++ b/src/src/css/main.css
@@ -294,7 +294,7 @@ body {
   }
 
   .base-text {
-    font-size: 24px;
+    font-size: 18px;
   }
 
   .caption-section-one {
