--- a/src/src/css/mainhead.css
+++ b/src/src/css/mainhead.css
@@ -36,6 +36,7 @@
     color: rgb(0, 51, 102);
     -webkit-text-stroke: 0.3px white;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .home-college-name-title {
@@ -60,6 +61,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .college-info-icon {
@@ -231,6 +233,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
+        text-align: center;
     }
 
     .home-college-name-title {
@@ -254,6 +257,7 @@
         justify-content: space-between;
         padding: 10px;
         padding-right: 20px;
+        text-align: center;
     }
 
     .home-college-description {
@@ -278,4 +282,19 @@
         font-size: 12px;
     }
 
+}
+
+
+@media only screen and (max-width: 600px) {
+    .home-college-description-holder {
+        flex-direction: column;
+    }
+
+    .home-college-description {
+        margin-top: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
 }
